# dartimg

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: dartimg.dart
lib/src/: dartimg_bindings.dart
macos/: dartimg.podspec
macos/Classes/: dartimg.c
macos/nativelib/: libimage_upscale.dylib
native/: Cargo.toml  cbindgen.yaml
native/src/: image.rs  lib.rs  resize.rs
native/src/resize/: engine.rs  ffi.rs
scripts/: bindgen.sh  build.sh  build_macos.sh  build_windows.sh
src/: CMakeLists.txt  dartimg.c
windows/: CMakeLists.txt
